@@ -10,6 +10,8 @@ Changes in progress
 - Solved categories error on breadcrumbs 
 - Disabled gravatar requests.
 - PhpInfo for xtecadmins.
+- Avoid upload large images (>2MB).
+- Hide full size option post insertion (maximum size width 1024)
 
 
 Changes 15.03.20
